Group_Ass3/y.output
Terminals unused in grammar

    SINGLE_COMMENT
    MULTILINE_COMMENT
    ENUM
    STRUCT
    TYPEDEF
    UNION
    HASH


Grammar

    0 $accept: start_symbol $end

    1 constant: INTEGER
    2         | FLOATING_CONSTANT
    3         | CHARACTER_CONSTANT

    4 primary_expression: IDENTIFIER
    5                   | constant
    6                   | STRING_LITERAL
    7                   | ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE

    8 postfix_expression: primary_expression
    9                   | postfix_expression SQUARE_BRACKET_OPEN expression SQUARE_BRACKET_CLOSE
   10                   | postfix_expression ROUND_BRACKET_OPEN argument_expression_list_opt ROUND_BRACKET_CLOSE
   11                   | postfix_expression DOT IDENTIFIER
   12                   | postfix_expression IMPLIES IDENTIFIER
   13                   | postfix_expression INCREMENT
   14                   | postfix_expression DECREMENT
   15                   | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE CURLY_BRACKET_OPEN initializer_list CURLY_BRACKET_CLOSE
   16                   | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE CURLY_BRACKET_OPEN initializer_list COMMA CURLY_BRACKET_CLOSE

   17 argument_expression_list_opt: ε
   18                             | argument_expression_list

   19 argument_expression_list: assignment_expression
   20                         | argument_expression_list COMMA assignment_expression

   21 unary_expression: postfix_expression
   22                 | INCREMENT unary_expression
   23                 | DECREMENT unary_expression
   24                 | unary_operator cast_expression
   25                 | SIZEOF unary_expression
   26                 | SIZEOF ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE

   27 unary_operator: BITWISE_AND
   28               | MUL
   29               | PLUS
   30               | MINUS
   31               | BITWISE_NOT
   32               | NOT

   33 cast_expression: unary_expression
   34                | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE cast_expression

   35 multiplicative_expression: cast_expression
   36                          | multiplicative_expression MUL cast_expression
   37                          | multiplicative_expression DIV cast_expression
   38                          | multiplicative_expression MOD cast_expression

   39 additive_expression: multiplicative_expression
   40                    | additive_expression PLUS multiplicative_expression
   41                    | additive_expression MINUS multiplicative_expression

   42 shift_expression: additive_expression
   43                 | shift_expression LEFT_SHIFT additive_expression
   44                 | shift_expression RIGHT_SHIFT additive_expression

   45 relational_expression: shift_expression
   46                      | relational_expression LESS_THAN shift_expression
   47                      | relational_expression GREATER_THAN shift_expression
   48                      | relational_expression LESS_EQUAL shift_expression
   49                      | relational_expression GREATER_EQUAL shift_expression

   50 equality_expression: relational_expression
   51                    | equality_expression EQUAL relational_expression
   52                    | equality_expression NOT_EQUAL relational_expression

   53 and_expression: equality_expression
   54               | and_expression BITWISE_AND equality_expression

   55 exclusive_or_expression: and_expression
   56                        | exclusive_or_expression BITWISE_XOR and_expression

   57 inclusive_or_expression: exclusive_or_expression
   58                        | inclusive_or_expression BITWISE_OR exclusive_or_expression

   59 logical_and_expression: inclusive_or_expression
   60                       | logical_and_expression AND inclusive_or_expression

   61 logical_or_expression: logical_and_expression
   62                      | logical_or_expression OR logical_and_expression

   63 conditional_expression: logical_or_expression
   64                       | logical_or_expression newstatement QUESTION countinst expression newstatement COLON countinst conditional_expression

   65 countinst: ε

   66 newstatement: ε

   67 assignment_expression: conditional_expression
   68                      | unary_expression ASSIGN assignment_expression
   69                      | unary_expression MUL_EQUAL assignment_expression
   70                      | unary_expression DIV_EQUAL assignment_expression
   71                      | unary_expression MOD_EQUAL assignment_expression
   72                      | unary_expression PLUS_EQUAL assignment_expression
   73                      | unary_expression MINUS_EQUAL assignment_expression
   74                      | unary_expression SHIFT_LEFT_EQUAL assignment_expression
   75                      | unary_expression SHIFT_RIGHT_EQUAL assignment_expression
   76                      | unary_expression BITWISE_AND_EQUAL assignment_expression
   77                      | unary_expression BITWISE_XOR_EQUAL assignment_expression
   78                      | unary_expression BITWISE_OR_EQUAL assignment_expression

   79 expression: assignment_expression
   80           | expression COMMA assignment_expression

   81 constant_expression: conditional_expression

   82 declaration: declaration_specifiers init_declarator_list_opt SEMICOLON

   83 declaration_specifiers: storage_class_specifier
   84                       | type_specifier
   85                       | type_qualifier
   86                       | function_specifier
   87                       | storage_class_specifier declaration_specifiers
   88                       | type_specifier declaration_specifiers
   89                       | type_qualifier declaration_specifiers
   90                       | function_specifier declaration_specifiers

   91 init_declarator_list_opt: ε
   92                         | init_declarator_list

   93 init_declarator_list: init_declarator
   94                     | init_declarator_list COMMA init_declarator

   95 init_declarator: declarator
   96                | declarator ASSIGN initializer

   97 storage_class_specifier: EXTERN
   98                        | AUTO
   99                        | REGISTER
  100                        | STATIC

  101 type_specifier: VOID
  102               | CHAR
  103               | SHORT
  104               | INT
  105               | LONG
  106               | FLOAT
  107               | SIGNED
  108               | UNSIGNED
  109               | BOOL
  110               | COMPLEX
  111               | IMAGINARY
  112               | DOUBLE

  113 specifier_qualifier_list: type_specifier specifier_qualifier_list
  114                         | type_qualifier specifier_qualifier_list
  115                         | type_specifier
  116                         | type_qualifier

  117 type_qualifier: CONST
  118               | RESTRICT
  119               | VOLATILE

  120 function_specifier: INLINE

  121 declarator: pointer direct_declarator
  122           | direct_declarator

  123 direct_declarator: IDENTIFIER
  124                  | ROUND_BRACKET_OPEN declarator ROUND_BRACKET_CLOSE
  125                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list assignment_expression_opt SQUARE_BRACKET_CLOSE
  126                  | direct_declarator SQUARE_BRACKET_OPEN assignment_expression SQUARE_BRACKET_CLOSE
  127                  | direct_declarator SQUARE_BRACKET_OPEN SQUARE_BRACKET_CLOSE
  128                  | direct_declarator SQUARE_BRACKET_OPEN STATIC type_qualifier_list_opt assignment_expression SQUARE_BRACKET_CLOSE
  129                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list STATIC assignment_expression SQUARE_BRACKET_CLOSE
  130                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list MUL SQUARE_BRACKET_CLOSE
  131                  | direct_declarator ROUND_BRACKET_OPEN switch_table parameter_type_list ROUND_BRACKET_CLOSE
  132                  | direct_declarator ROUND_BRACKET_OPEN switch_table ROUND_BRACKET_CLOSE
  133                  | direct_declarator ROUND_BRACKET_OPEN identifier_list ROUND_BRACKET_CLOSE

  134 switch_table: ε

  135 type_qualifier_list_opt: ε
  136                        | type_qualifier_list

  137 assignment_expression_opt: ε
  138                          | assignment_expression

  139 pointer: MUL type_qualifier_list_opt
  140        | MUL type_qualifier_list_opt pointer

  141 type_qualifier_list: type_qualifier
  142                    | type_qualifier_list type_qualifier

  143 parameter_type_list: parameter_list
  144                    | parameter_list COMMA ELLIPSIS

  145 parameter_list: parameter_declaration
  146               | parameter_list COMMA parameter_declaration

  147 parameter_declaration: declaration_specifiers declarator
  148                      | declaration_specifiers

  149 identifier_list: IDENTIFIER
  150                | identifier_list COMMA IDENTIFIER

  151 type_name: specifier_qualifier_list

  152 initializer: assignment_expression
  153            | CURLY_BRACKET_OPEN initializer_list CURLY_BRACKET_CLOSE
  154            | CURLY_BRACKET_OPEN initializer_list COMMA CURLY_BRACKET_CLOSE

  155 initializer_list: designation_opt initializer
  156                 | initializer_list COMMA designation_opt initializer

  157 designation_opt: designation
  158                | ε

  159 designation: designator_list ASSIGN

  160 designator_list: designator
  161                | designator_list designator

  162 designator: SQUARE_BRACKET_OPEN constant_expression SQUARE_BRACKET_CLOSE
  163           | DOT IDENTIFIER

  164 statement: labeled_statement
  165          | compound_statement
  166          | expression_statement
  167          | selection_statement
  168          | iteration_statement
  169          | jump_statement

  170 loop_block: labeled_statement
  171           | expression_statement
  172           | selection_statement
  173           | iteration_statement
  174           | jump_statement

  175 labeled_statement: IDENTIFIER COLON statement
  176                  | CASE constant_expression COLON statement
  177                  | DEFAULT COLON statement

  178 compound_statement: CURLY_BRACKET_OPEN createST switch_table block_item_list_opt CURLY_BRACKET_CLOSE

  179 createST: ε

  180 block_item_list_opt: ε
  181                    | block_item_list

  182 block_item_list: block_item
  183                | block_item_list countinst block_item

  184 block_item: declaration
  185           | statement

  186 expression_statement: expression_opt SEMICOLON

  187 expression_opt: ε
  188               | expression

  189 selection_statement: IF ROUND_BRACKET_OPEN expression newstatement ROUND_BRACKET_CLOSE countinst statement newstatement
  190                    | IF ROUND_BRACKET_OPEN expression newstatement ROUND_BRACKET_CLOSE countinst statement newstatement ELSE countinst statement
  191                    | SWITCH ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE statement

  192 iteration_statement: WHILE whilestart ROUND_BRACKET_OPEN createST switch_table countinst expression ROUND_BRACKET_CLOSE countinst loop_block
  193                    | WHILE whilestart ROUND_BRACKET_OPEN createST switch_table countinst expression ROUND_BRACKET_CLOSE countinst CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE
  194                    | DO dostart countinst loop_block countinst WHILE ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE SEMICOLON
  195                    | DO dostart countinst CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE countinst WHILE ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE SEMICOLON
  196                    | FOR forstart ROUND_BRACKET_OPEN createST switch_table expression_opt SEMICOLON countinst expression_opt SEMICOLON countinst expression_opt newstatement ROUND_BRACKET_CLOSE countinst loop_block
  197                    | FOR forstart ROUND_BRACKET_OPEN createST switch_table expression_opt SEMICOLON countinst expression_opt SEMICOLON countinst expression_opt newstatement ROUND_BRACKET_CLOSE countinst CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE
  198                    | FOR forstart ROUND_BRACKET_OPEN createST switch_table declaration countinst expression_opt SEMICOLON countinst expression_opt newstatement ROUND_BRACKET_CLOSE countinst loop_block
  199                    | FOR forstart ROUND_BRACKET_OPEN createST switch_table declaration countinst expression_opt SEMICOLON countinst expression_opt newstatement ROUND_BRACKET_CLOSE countinst CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE

  200 forstart: ε

  201 whilestart: ε

  202 dostart: ε

  203 jump_statement: GOTO IDENTIFIER SEMICOLON
  204               | CONTINUE SEMICOLON
  205               | BREAK SEMICOLON
  206               | RETURN expression_opt SEMICOLON

  207 start_symbol: translation_unit

  208 translation_unit: external_declaration
  209                 | translation_unit external_declaration

  210 external_declaration: function_definition
  211                     | declaration

  212 function_definition: declaration_specifiers declarator declaration_list_opt CURLY_BRACKET_OPEN switch_table block_item_list_opt CURLY_BRACKET_CLOSE

  213 declaration_list_opt: ε
  214                     | declaration_list

  215 declaration_list: declaration
  216                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    SINGLE_COMMENT (258)
    MULTILINE_COMMENT (259)
    AUTO (260) 98
    BREAK (261) 205
    CASE (262) 176
    CHAR (263) 102
    CONST (264) 117
    CONTINUE (265) 204
    DEFAULT (266) 177
    DO (267) 194 195
    DOUBLE (268) 112
    ELSE (269) 190
    ENUM (270)
    EXTERN (271) 97
    REGISTER (272) 99
    FLOAT (273) 106
    FOR (274) 196 197 198 199
    GOTO (275) 203
    IF (276) 189 190
    INLINE (277) 120
    INT (278) 104
    LONG (279) 105
    RESTRICT (280) 118
    RETURN (281) 206
    SHORT (282) 103
    SIGNED (283) 107
    SIZEOF (284) 25 26
    STATIC (285) 100 128 129
    STRUCT (286)
    SWITCH (287) 191
    TYPEDEF (288)
    UNION (289)
    UNSIGNED (290) 108
    VOID (291) 101
    VOLATILE (292) 119
    WHILE (293) 192 193 194 195
    BOOL (294) 109
    COMPLEX (295) 110
    IMAGINARY (296) 111
    SQUARE_BRACKET_OPEN (297) 9 125 126 127 128 129 130 162
    SQUARE_BRACKET_CLOSE (298) 9 125 126 127 128 129 130 162
    ROUND_BRACKET_OPEN (299) 7 10 15 16 26 34 124 131 132 133 189 190 191 192 193 194 195 196 197 198 199
    ROUND_BRACKET_CLOSE (300) 7 10 15 16 26 34 124 131 132 133 189 190 191 192 193 194 195 196 197 198 199
    CURLY_BRACKET_OPEN (301) 15 16 153 154 178 193 195 197 199 212
    CURLY_BRACKET_CLOSE (302) 15 16 153 154 178 193 195 197 199 212
    DOT (303) 11 163
    IMPLIES (304) 12
    INCREMENT (305) 13 22
    DECREMENT (306) 14 23
    BITWISE_AND (307) 27 54
    MUL (308) 28 36 130 139 140
    PLUS (309) 29 40
    MINUS (310) 30 41
    BITWISE_NOT (311) 31
    NOT (312) 32
    DIV (313) 37
    MOD (314) 38
    LEFT_SHIFT (315) 43
    RIGHT_SHIFT (316) 44
    LESS_THAN (317) 46
    GREATER_THAN (318) 47
    LESS_EQUAL (319) 48
    GREATER_EQUAL (320) 49
    EQUAL (321) 51
    NOT_EQUAL (322) 52
    BITWISE_XOR (323) 56
    BITWISE_OR (324) 58
    AND (325) 60
    OR (326) 62
    QUESTION (327) 64
    COLON (328) 64 175 176 177
    SEMICOLON (329) 82 186 194 195 196 197 198 199 203 204 205 206
    ELLIPSIS (330) 144
    ASSIGN (331) 68 96 159
    MUL_EQUAL (332) 69
    DIV_EQUAL (333) 70
    MOD_EQUAL (334) 71
    PLUS_EQUAL (335) 72
    MINUS_EQUAL (336) 73
    SHIFT_LEFT_EQUAL (337) 74
    SHIFT_RIGHT_EQUAL (338) 75
    BITWISE_AND_EQUAL (339) 76
    BITWISE_XOR_EQUAL (340) 77
    BITWISE_OR_EQUAL (341) 78
    COMMA (342) 16 20 80 94 144 146 150 154 156
    HASH (343)
    IDENTIFIER <SymbolPointer> (344) 4 11 12 123 149 150 163 175 203
    INTEGER <INTVAL> (345) 1
    FLOATING_CONSTANT <FLOATVAL> (346) 2
    CHARACTER_CONSTANT <CHARVAL> (347) 3
    STRING_LITERAL <CHARVAL> (348) 6
    THEN (349)


Nonterminals, with rules where they appear

    $accept (95)
        on left: 0
    constant <Express> (96)
        on left: 1 2 3
        on right: 5
    primary_expression <Express> (97)
        on left: 4 5 6 7
        on right: 8
    postfix_expression <Array> (98)
        on left: 8 9 10 11 12 13 14 15 16
        on right: 9 10 11 12 13 14 21
    argument_expression_list_opt <Parameter> (99)
        on left: 17 18
        on right: 10
    argument_expression_list <Parameter> (100)
        on left: 19 20
        on right: 18 20
    unary_expression <Array> (101)
        on left: 21 22 23 24 25 26
        on right: 22 23 25 33 68 69 70 71 72 73 74 75 76 77 78
    unary_operator <UnaryOper> (102)
        on left: 27 28 29 30 31 32
        on right: 24
    cast_expression <Array> (103)
        on left: 33 34
        on right: 24 34 35 36 37 38
    multiplicative_expression <Express> (104)
        on left: 35 36 37 38
        on right: 36 37 38 39 40 41
    additive_expression <Express> (105)
        on left: 39 40 41
        on right: 40 41 42 43 44
    shift_expression <Express> (106)
        on left: 42 43 44
        on right: 43 44 45 46 47 48 49
    relational_expression <Express> (107)
        on left: 45 46 47 48 49
        on right: 46 47 48 49 50 51 52
    equality_expression <Express> (108)
        on left: 50 51 52
        on right: 51 52 53 54
    and_expression <Express> (109)
        on left: 53 54
        on right: 54 55 56
    exclusive_or_expression <Express> (110)
        on left: 55 56
        on right: 56 57 58
    inclusive_or_expression <Express> (111)
        on left: 57 58
        on right: 58 59 60
    logical_and_expression <Express> (112)
        on left: 59 60
        on right: 60 61 62
    logical_or_expression <Express> (113)
        on left: 61 62
        on right: 62 63 64
    conditional_expression <Express> (114)
        on left: 63 64
        on right: 64 67 81
    countinst <InstCount> (115)
        on left: 65
        on right: 64 183 189 190 192 193 194 195 196 197 198 199
    newstatement <Stateme> (116)
        on left: 66
        on right: 64 189 190 196 197 198 199
    assignment_expression <Express> (117)
        on left: 67 68 69 70 71 72 73 74 75 76 77 78
        on right: 19 20 68 69 70 71 72 73 74 75 76 77 78 79 80 126 128 129 138 152
    expression <Express> (118)
        on left: 79 80
        on right: 7 9 64 80 188 189 190 191 192 193 194 195
    constant_expression <Express> (119)
        on left: 81
        on right: 162 176
    declaration <SymbolPointer> (120)
        on left: 82
        on right: 184 198 199 211 215 216
    declaration_specifiers <Express> (121)
        on left: 83 84 85 86 87 88 89 90
        on right: 82 87 88 89 90 147 148 212
    init_declarator_list_opt <Express> (122)
        on left: 91 92
        on right: 82
    init_declarator_list <Express> (123)
        on left: 93 94
        on right: 92 94
    init_declarator <SymbolPointer> (124)
        on left: 95 96
        on right: 93 94
    storage_class_specifier <Express> (125)
        on left: 97 98 99 100
        on right: 83 87
    type_specifier <Express> (126)
        on left: 101 102 103 104 105 106 107 108 109 110 111 112
        on right: 84 88 113 115
    specifier_qualifier_list <Express> (127)
        on left: 113 114 115 116
        on right: 113 114 151
    type_qualifier <Express> (128)
        on left: 117 118 119
        on right: 85 89 114 116 141 142
    function_specifier <Express> (129)
        on left: 120
        on right: 86 90
    declarator <SymbolPointer> (130)
        on left: 121 122
        on right: 95 96 124 147 212
    direct_declarator <SymbolPointer> (131)
        on left: 123 124 125 126 127 128 129 130 131 132 133
        on right: 121 122 125 126 127 128 129 130 131 132 133
    switch_table (132)
        on left: 134
        on right: 131 132 178 192 193 196 197 198 199 212
    type_qualifier_list_opt <Express> (133)
        on left: 135 136
        on right: 128 139 140
    assignment_expression_opt <Express> (134)
        on left: 137 138
        on right: 125
    pointer <Type> (135)
        on left: 139 140
        on right: 121 140
    type_qualifier_list <Express> (136)
        on left: 141 142
        on right: 125 129 130 136 142
    parameter_type_list <Express> (137)
        on left: 143 144
        on right: 131
    parameter_list <Express> (138)
        on left: 145 146
        on right: 143 144 146
    parameter_declaration <Express> (139)
        on left: 147 148
        on right: 145 146
    identifier_list <Express> (140)
        on left: 149 150
        on right: 133 150
    type_name <Express> (141)
        on left: 151
        on right: 15 16 26 34
    initializer <SymbolPointer> (142)
        on left: 152 153 154
        on right: 96 155 156
    initializer_list <Express> (143)
        on left: 155 156
        on right: 15 16 153 154 156
    designation_opt <Express> (144)
        on left: 157 158
        on right: 155 156
    designation <Express> (145)
        on left: 159
        on right: 157
    designator_list <Express> (146)
        on left: 160 161
        on right: 159 161
    designator <Express> (147)
        on left: 162 163
        on right: 160 161
    statement <Stateme> (148)
        on left: 164 165 166 167 168 169
        on right: 175 176 177 185 189 190 191
    loop_block <Stateme> (149)
        on left: 170 171 172 173 174
        on right: 192 194 196 198
    labeled_statement <Stateme> (150)
        on left: 175 176 177
        on right: 164 170
    compound_statement <Stateme> (151)
        on left: 178
        on right: 165
    createST (152)
        on left: 179
        on right: 178 192 193 196 197 198 199
    block_item_list_opt <Stateme> (153)
        on left: 180 181
        on right: 178 193 195 197 199 212
    block_item_list <Stateme> (154)
        on left: 182 183
        on right: 181 183
    block_item <Stateme> (155)
        on left: 184 185
        on right: 182 183
    expression_statement <Express> (156)
        on left: 186
        on right: 166 171
    expression_opt <Express> (157)
        on left: 187 188
        on right: 186 196 197 198 199 206
    selection_statement <Stateme> (158)
        on left: 189 190 191
        on right: 167 172
    iteration_statement <Stateme> (159)
        on left: 192 193 194 195 196 197 198 199
        on right: 168 173
    forstart (160)
        on left: 200
        on right: 196 197 198 199
    whilestart (161)
        on left: 201
        on right: 192 193
    dostart (162)
        on left: 202
        on right: 194 195
    jump_statement <Stateme> (163)
        on left: 203 204 205 206
        on right: 169 174
    start_symbol (164)
        on left: 207
        on right: 0
    translation_unit <Express> (165)
        on left: 208 209
        on right: 207 209
    external_declaration <Express> (166)
        on left: 210 211
        on right: 208 209
    function_definition <Express> (167)
        on left: 212
        on right: 210
    declaration_list_opt <Express> (168)
        on left: 213 214
        on right: 212
    declaration_list <Express> (169)
        on left: 215 216
        on right: 214 216


State 0

    0 $accept: • start_symbol $end

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    EXTERN     shift, and go to state 5
    REGISTER   shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    RESTRICT   shift, and go to state 11
    SHORT      shift, and go to state 12
    SIGNED     shift, and go to state 13
    STATIC     shift, and go to state 14
    UNSIGNED   shift, and go to state 15
    VOID       shift, and go to state 16
    VOLATILE   shift, and go to state 17
    BOOL       shift, and go to state 18
    COMPLEX    shift, and go to state 19
    IMAGINARY  shift, and go to state 20

    declaration              go to state 21
    declaration_specifiers   go to state 22
    storage_class_specifier  go to state 23
    type_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26
    start_symbol             go to state 27
    translation_unit         go to state 28
    external_declaration     go to state 29
    function_definition      go to state 30


State 1

   98 storage_class_specifier: AUTO •

    $default  reduce using rule 98 (storage_class_specifier)


State 2

  102 type_specifier: CHAR •

    $default  reduce using rule 102 (type_specifier)


State 3

  117 type_qualifier: CONST •

    $default  reduce using rule 117 (type_qualifier)


State 4

  112 type_specifier: DOUBLE •

    $default  reduce using rule 112 (type_specifier)


State 5

   97 storage_class_specifier: EXTERN •

    $default  reduce using rule 97 (storage_class_specifier)


State 6

   99 storage_class_specifier: REGISTER •

    $default  reduce using rule 99 (storage_class_specifier)


State 7

  106 type_specifier: FLOAT •

    $default  reduce using rule 106 (type_specifier)


State 8

  120 function_specifier: INLINE •

    $default  reduce using rule 120 (function_specifier)


State 9

  104 type_specifier: INT •

    $default  reduce using rule 104 (type_specifier)


State 10

  105 type_specifier: LONG •

    $default  reduce using rule 105 (type_specifier)


State 11

  118 type_qualifier: RESTRICT •

    $default  reduce using rule 118 (type_qualifier)


State 12

  103 type_specifier: SHORT •

    $default  reduce using rule 103 (type_specifier)


State 13

  107 type_specifier: SIGNED •

    $default  reduce using rule 107 (type_specifier)


State 14

  100 storage_class_specifier: STATIC •

    $default  reduce using rule 100 (storage_class_specifier)


State 15

  108 type_specifier: UNSIGNED •

    $default  reduce using rule 108 (type_specifier)


State 16

  101 type_specifier: VOID •

    $default  reduce using rule 101 (type_specifier)


State 17

  119 type_qualifier: VOLATILE •

    $default  reduce using rule 119 (type_qualifier)


State 18

  109 type_specifier: BOOL •

    $default  reduce using rule 109 (type_specifier)


State 19

  110 type_specifier: COMPLEX •

    $default  reduce using rule 110 (type_specifier)


State 20

  111 type_specifier: IMAGINARY •

    $default  reduce using rule 111 (type_specifier)


State 21

  211 external_declaration: declaration •

    $default  reduce using rule 211 (external_declaration)


State 22

   82 declaration: declaration_specifiers • init_declarator_list_opt SEMICOLON
  212 function_definition: declaration_specifiers • declarator declaration_list_opt CURLY_BRACKET_OPEN switch_table block_item_list_opt CURLY_BRACKET_CLOSE

    ROUND_BRACKET_OPEN  shift, and go to state 31
    MUL                 shift, and go to state 32
    IDENTIFIER          shift, and go to state 33

    $default  reduce using rule 91 (init_declarator_list_opt)

    init_declarator_list_opt  go to state 34
    init_declarator_list      go to state 35
    init_declarator           go to state 36
    declarator                go to state 37
    direct_declarator         go to state 38
    pointer                   go to state 39


State 23

   83 declaration_specifiers: storage_class_specifier •
   87                       | storage_class_specifier • declaration_specifiers

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    EXTERN     shift, and go to state 5
    REGISTER   shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    RESTRICT   shift, and go to state 11
    SHORT      shift, and go to state 12
    SIGNED     shift, and go to state 13
    STATIC     shift, and go to state 14
    UNSIGNED   shift, and go to state 15
    VOID       shift, and go to state 16
    VOLATILE   shift, and go to state 17
    BOOL       shift, and go to state 18
    COMPLEX    shift, and go to state 19
    IMAGINARY  shift, and go to state 20

    $default  reduce using rule 83 (declaration_specifiers)

    declaration_specifiers   go to state 40
    storage_class_specifier  go to state 23
    type_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26


State 24

   84 declaration_specifiers: type_specifier •
   88                       | type_specifier • declaration_specifiers

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    EXTERN     shift, and go to state 5
    REGISTER   shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    RESTRICT   shift, and go to state 11
    SHORT      shift, and go to state 12
    SIGNED     shift, and go to state 13
    STATIC     shift, and go to state 14
    UNSIGNED   shift, and go to state 15
    VOID       shift, and go to state 16
    VOLATILE   shift, and go to state 17
    BOOL       shift, and go to state 18
    COMPLEX    shift, and go to state 19
    IMAGINARY  shift, and go to state 20

    $default  reduce using rule 84 (declaration_specifiers)

    declaration_specifiers   go to state 41
    storage_class_specifier  go to state 23
    type_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26


State 25

   85 declaration_specifiers: type_qualifier •
   89                       | type_qualifier • declaration_specifiers

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    EXTERN     shift, and go to state 5
    REGISTER   shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    RESTRICT   shift, and go to state 11
    SHORT      shift, and go to state 12
    SIGNED     shift, and go to state 13
    STATIC     shift, and go to state 14
    UNSIGNED   shift, and go to state 15
    VOID       shift, and go to state 16
    VOLATILE   shift, and go to state 17
    BOOL       shift, and go to state 18
    COMPLEX    shift, and go to state 19
    IMAGINARY  shift, and go to state 20

    $default  reduce using rule 85 (declaration_specifiers)

    declaration_specifiers   go to state 42
    storage_class_specifier  go to state 23
    type_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26


State 26

   86 declaration_specifiers: function_specifier •
   90                       | function_specifier • declaration_specifiers

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    EXTERN     shift, and go to state 5
    REGISTER   shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    RESTRICT   shift, and go to state 11
    SHORT      shift, and go to state 12
    SIGNED     shift, and go to state 13
    STATIC     shift, and go to state 14
    UNSIGNED   shift, and go to state 15
    VOID       shift, and go to state 16
    VOLATILE   shift, and go to state 17
    BOOL       shift, and go to state 18
    COMPLEX    shift, and go to state 19
    IMAGINARY  shift, and go to state 20

    $default  reduce using rule 86 (declaration_specifiers)

    declaration_specifiers   go to state 43
    storage_class_specifier  go to state 23
    type_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26


State 27

    0 $accept: start_symbol • $end

    $end  shift, and go to state 44


State 28

  207 start_symbol: translation_unit •
  209 translation_unit: translation_unit • external_declaration

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    EXTERN     shift, and go to state 5
    REGISTER   shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    RESTRICT   shift, and go to state 11
    SHORT      shift, and go to state 12
    SIGNED     shift, and go to state 13
    STATIC     shift, and go to state 14
    UNSIGNED   shift, and go to state 15
    VOID       shift, and go to state 16
    VOLATILE   shift, and go to state 17
    BOOL       shift, and go to state 18
    COMPLEX    shift, and go to state 19
    IMAGINARY  shift, and go to state 20

    $default  reduce using rule 207 (start_symbol)

    declaration              go to state 21
    declaration_specifiers   go to state 22
    storage_class_specifier  go to state 23
    type_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26
    external_declaration     go to state 45
    function_definition      go to state 30


State 29

  208 translation_unit: external_declaration •

    $default  reduce using rule 208 (translation_unit)


State 30

  210 external_declaration: function_definition •

    $default  reduce using rule 210 (external_declaration)


State 31

  124 direct_declarator: ROUND_BRACKET_OPEN • declarator ROUND_BRACKET_CLOSE

    ROUND_BRACKET_OPEN  shift, and go to state 31
    MUL                 shift, and go to state 32
    IDENTIFIER          shift, and go to state 33

    declarator         go to state 46
    direct_declarator  go to state 38
    pointer            go to state 39


State 32

  139 pointer: MUL • type_qualifier_list_opt
  140        | MUL • type_qualifier_list_opt pointer

    CONST     shift, and go to state 3
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 17

    $default  reduce using rule 135 (type_qualifier_list_opt)

    type_qualifier           go to state 47
    type_qualifier_list_opt  go to state 48
    type_qualifier_list      go to state 49


State 33

  123 direct_declarator: IDENTIFIER •

    $default  reduce using rule 123 (direct_declarator)


State 34

   82 declaration: declaration_specifiers init_declarator_list_opt • SEMICOLON

    SEMICOLON  shift, and go to state 50


State 35

   92 init_declarator_list_opt: init_declarator_list •
   94 init_declarator_list: init_declarator_list • COMMA init_declarator

    COMMA  shift, and go to state 51

    $default  reduce using rule 92 (init_declarator_list_opt)


State 36

   93 init_declarator_list: init_declarator •

    $default  reduce using rule 93 (init_declarator_list)


State 37

   95 init_declarator: declarator •
   96                | declarator • ASSIGN initializer
  212 function_definition: declaration_specifiers declarator • declaration_list_opt CURLY_BRACKET_OPEN switch_table block_item_list_opt CURLY_BRACKET_CLOSE
